Setting the correct default zone for Eureka.

--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,1 @@
-eureka.instance.hostname=localhost
-eureka.instance.nonSecurePort=8762
+eureka.client.serviceUrl.defaultZone=http://localhost:6872/eureka/
