--- a/person.properties
+++ b/person.properties
@@ -1,5 +1,7 @@
 server.port=${PORT:0}
 
+spring.sleuth.sampler.percentage=1.0
+
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=test
 spring.datasource.password=test
