Trying the serviceId for the edge to see if it can find person.

--- a/edge.properties
+++ b/edge.properties
@@ -1,6 +1,7 @@
 server.port = 80
 zuul.debug.request=true
-zuul.routes.person = /person/**
+zuul.routes.person.path=/person/**
+zuul.routes.person.serviceId=person
 
 # Root logger option
 log4j.rootLogger=DEBUG, stdout, file
