--- a/edge.properties
+++ b/edge.properties
@@ -4,7 +4,7 @@ zuul.routes.person.path=/person/**
 zuul.routes.person.serviceId=person
 
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=ALL, stdout, file
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
