Setting the sensitive headers to exclude Authorization, this is needed in our microservice security strategy.

--- a/edge.properties
+++ b/edge.properties
@@ -1,5 +1,6 @@
 server.port = 80
 zuul.debug.request=true
+zuul.sensitiveHeaders=Cookie,Set-Cookie
 zuul.routes.person.path=/person/**
 zuul.routes.person.serviceId=person
 
