Allow the auth server to be hosted on a random port. Register it with the api edge.

--- a/edge.properties
+++ b/edge.properties
@@ -3,6 +3,8 @@ zuul.debug.request=true
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 zuul.routes.person.path=/person/**
 zuul.routes.person.serviceId=person
+zuul.routes.auth.path=/auth/**
+zuul.routes.auth.serviceId=platformauth
 
 # Root logger option
 log4j.rootLogger=ALL, stdout, file
