--- a/person.properties
+++ b/person.properties
@@ -13,7 +13,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-security.oauth2.resource.userInfoUri = http://localhost:8080/user
+security.oauth2.resource.userInfoUri = http://localhost/auth/user
 
 # Root logger option
 log4j.rootLogger=DEBUG, stdout, file
