--- a/zipkin.properties
+++ b/zipkin.properties
@@ -1,5 +1,5 @@
 server.port=9411
 
-spring.datasource.initialize=false
-spring.sleuth.enabled=false
-zipkin.storage.type=mem
+spring.datasource.initialize = false
+spring.sleuth.enabled = false
+zipkin.store.type = mem
