--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8762/eureka/
+spring.sleuth.sampler.percentage=1.0
+spring.zipkin.host=localhost
+spring.zipkin.port=9411
