Trying the log4j appender.

--- a/person.properties
+++ b/person.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 security.oauth2.resource.userInfoUri = http://localhost/auth/user
 
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=DEBUG, stdout, file, tcp
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -30,3 +30,11 @@ log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+
+
+log4j.appender.tcp=org.apache.log4j.net.SocketAppender
+log4j.appender.tcp.Port=4055
+log4j.appender.tcp.RemoteHost=localhost
+log4j.appender.tcp.ReconnectionDelay=10000
+log4j.appender.tcp.Application=person
