Using the log4j json output.

--- a/person.properties
+++ b/person.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 security.oauth2.resource.userInfoUri = http://localhost/auth/user
 
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, file, tcp
+log4j.rootLogger=DEBUG, stdout, file, json
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -31,10 +31,8 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-
-
-log4j.appender.tcp=org.apache.log4j.net.SocketAppender
-log4j.appender.tcp.Port=4055
-log4j.appender.tcp.RemoteHost=localhost
-log4j.appender.tcp.ReconnectionDelay=10000
-log4j.appender.tcp.Application=person
+log4j.appender.json=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.json.File=c:\programdata\elasticsearch\logs\person.log
+log4j.appender.json.DatePattern=.yyyy-MM-dd
+log4j.appender.json.layout=net.logstash.log4j.JSONEventLayoutV1
+log4j.appender.json.layout.UserFields=application:log,environment:dev
